--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nba-stats-bot",
+  "name": "nba-free-bot",
   "version": "1.0.0",
   "main": "nba-bot.js",
   "scripts": {
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "node-schedule": "^2.1.0",
