--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "nba-bot.js",
   "scripts": {
-    "start": "node nba-bot.js"
+    "start": "node nba-bot.js",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
     "axios": "^1.6.0",
