--- a/keys.env
+++ b/keys.env
@@ -2,3 +2,4 @@ TWITTER_APP_KEY=MQnQJz6JfQ6FdbhGjmsgtN5aE
 TWITTER_APP_SECRET=MO4J0paVS0kvmPvSh715OjDU5R8cjJuWlOPN6Zz5JDPZqgmb5G
 TWITTER_ACCESS_TOKEN=1509015998317404161-0PtKc05VWPikCLXyKtXvIIo5IQ8GUF
 TWITTER_ACCESS_SECRET=ejdT2uFYLQXFvHM1rkoJXe6U2FX0PHTqWjgqVQhm3EmoL
+PUPPETEER_CACHE_DIR=/tmp/puppeteer
