--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "nba-free-bot",
+  "name": "nba-bot",
   "version": "1.0.0",
   "main": "nba-bot.js",
   "scripts": {
-    "start": "node nba-bot.js",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "start": "node nba-bot.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "nba-api-client": "^1.1.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1",
     "node-schedule": "^2.1.0",
     "puppeteer": "^22.0.0",
-    "twitter-api-v2": "^1.15.0"
+    "twitter-api-v2": "^1.12.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
