--- a/.github/workflows/nba-bot.yml
+++ b/.github/workflows/nba-bot.yml
@@ -3,7 +3,7 @@ name: NBA Twitter Bot
 on:
   schedule:
     - cron: '0 0 * * *' # Daily at midnight UTC
-  workflow_dispatch: # Manual trigger option
+  workflow_dispatch:
 
 jobs:
   run-bot:
@@ -19,6 +19,20 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Debug environment variables
+        run: |
+          echo "TWITTER_APP_KEY: $TWITTER_APP_KEY"
+          echo "TWITTER_APP_SECRET: $TWITTER_APP_SECRET"
+          echo "TWITTER_ACCESS_TOKEN: $TWITTER_ACCESS_TOKEN"
+          echo "TWITTER_ACCESS_SECRET: $TWITTER_ACCESS_SECRET"
+          echo "Rapid_API_KEY: $Rapid_API_KEY"
+        env:
+          TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
+          TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
+          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
+          Rapid_API_KEY: ${{ secrets.RAPID_API_KEY }}
 
       - name: Run the bot
         env:
