--- a/.github/workflows/nba-bot.yml
+++ b/.github/workflows/nba-bot.yml
@@ -22,11 +22,11 @@ jobs:
 
       - name: Debug environment variables
         run: |
-          echo "TWITTER_APP_KEY: $TWITTER_APP_KEY"
-          echo "TWITTER_APP_SECRET: $TWITTER_APP_SECRET"
-          echo "TWITTER_ACCESS_TOKEN: $TWITTER_ACCESS_TOKEN"
-          echo "TWITTER_ACCESS_SECRET: $TWITTER_ACCESS_SECRET"
-          echo "Rapid_API_KEY: $Rapid_API_KEY"
+          echo "TWITTER_APP_KEY is set: ${TWITTER_APP_KEY:+set}"
+          echo "TWITTER_APP_SECRET is set: ${TWITTER_APP_SECRET:+set}"
+          echo "TWITTER_ACCESS_TOKEN is set: ${TWITTER_ACCESS_TOKEN:+set}"
+          echo "TWITTER_ACCESS_SECRET is set: ${TWITTER_ACCESS_SECRET:+set}"
+          echo "Rapid_API_KEY is set: ${Rapid_API_KEY:+set}"
         env:
           TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
           TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
