--- a/.github/workflows/nba-bot.yml
+++ b/.github/workflows/nba-bot.yml
@@ -56,11 +56,13 @@ jobs:
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
           Rapid_API_KEY: ${{ secrets.RAPID_API_KEY }}
 
-      - name: Run the bot
-        env:
-          TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
-          TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
-          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
-          Rapid_API_KEY: ${{ secrets.RAPID_API_KEY }}
-        run: node -e "require('./nba-bot').postNBATweets().then(() => { console.log('Tweets posted'); process.exit(0); }).catch(err => { console.error(err); process.exit(1); })"
+       - name: Trigger Render Redeploy
+          if: success()
+          env:
+          RENDER_API_KEY: ${{ secrets.test }}
+          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
+        run: |
+    curl -X POST "https://api.render.com/v1/services/${RENDER_SERVICE_ID}/deploys" \
+    -H "Authorization: Bearer ${RENDER_API_KEY}" \
+    -H "Content-Type: application/json" \
+    || echo "Failed to trigger Render redeploy"
