--- a/.github/workflows/nba_bot.yml
+++ b/.github/workflows/nba_bot.yml
@@ -1,59 +1,50 @@
-name: NBA Tweet Bot
+name: NBA Bot
 
+# Trigger the workflow daily at 12:00 UTC or manually via workflow_dispatch
 on:
   schedule:
-    # Runs every day at 8 AM CET (6 AM UTC, since CET is UTC+2)
-    - cron: '0 6 * * *'
-  # Allows manual triggering from GitHub Actions UI
+    - cron: '0 12 * * *'
   workflow_dispatch:
 
 jobs:
-  run-nba-tweet-bot:
+  run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+      # Check out the repository code
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js environment
+      # Set up Node.js environment
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '18' # Specify the Node.js version your bot uses
+          node-version: '16'
 
-      # Step 3: Cache Node.js modules
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      # Step 4: Install dependencies
+      # Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # Step 5: Run the NBA tweet bot
+      # Debug environment variables (shows if secrets are set, masks values)
+      - name: Debug environment
+        run: |
+          echo "Checking environment variables..."
+          echo "RAPIDAPI_KEY: ${RAPIDAPI_KEY:0:4}... (masked)"
+          echo "TWITTER_APP_KEY: ${TWITTER_APP_KEY:0:4}... (masked)"
+          echo "TWITTER_APP_SECRET: ${TWITTER_APP_SECRET:0:4}... (masked)"
+          echo "TWITTER_ACCESS_TOKEN: ${TWITTER_ACCESS_TOKEN:0:4}... (masked)"
+          echo "TWITTER_ACCESS_SECRET: ${TWITTER_ACCESS_SECRET:0:4}... (masked)"
+          echo "Node modules installed:"
+          ls -l node_modules | head -n 10
+
+      # Run the NBA bot
       - name: Run NBA Tweet Bot
         env:
+          NODE_ENV: production
+          RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY }}
           TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
           TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
-          RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY }}
-        run: node nba-bot.js
-
-      # Step 6: Notify on failure (optional)
-      - name: Notify on failure
-        if: failure()
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'NBA Tweet Bot workflow failed. Please check the logs.'
-            })
+        run: |
+          node -e "require('./nba-bot').postNBATweets().then(() => { console.log('Tweets posted'); process.exit(0); }).catch(err => { console.error('Error:', err.message, err.stack); process.exit(1); })"
