--- a/.github/workflows/nba_bot.yml
+++ b/.github/workflows/nba_bot.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          cache: 'npm' # Cache dependencies based on package-lock.json
 
       # Install dependencies
       - name: Install dependencies
@@ -38,6 +39,8 @@ jobs:
           ls -l node_modules | head -n 10
           echo "Repository files:"
           ls -R
+          echo "Script content:"
+          cat nba-bot.js | head -n 20
 
       # Run the NBA bot
       - name: Run NBA Tweet Bot
@@ -49,9 +52,9 @@ jobs:
           TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
           TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
         run: |
-          node -e "require('./nba-bot').postNBATweets().then(() => { console.log('Tweets posted'); process.exit(0); }).catch(err => { console.error('Error:', err.message, err.stack); process.exit(1); })"
+          node nba-bot.js
 
-      # Optional: Notify on failure (e.g., via Slack, if configured)
+      # Notify on failure (optional, requires SLACK_WEBHOOK_URL secret)
       - name: Notify on failure
         if: failure()
         env:
