--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "nba-bot",
+  "name": "twitter_nba_quote_bot",
   "version": "1.0.0",
-  "main": "nba-bot.js",
   "scripts": {
     "start": "node nba-bot.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "node-schedule": "^2.1.1",
-    "sharp": "^0.34.0",
-    "twitter-api-v2": "^1.15.2"
-  },
-  "engines": {
-    "node": "18.x"
+    "axios": "^1.6.0",
+    "dotenv": "^16.0.0",
+    "sharp": "^0.32.0",
+    "twitter-api-v2": "^1.12.0"
   }
 }
