--- a/.github/workflows/nba_bot.yml
+++ b/.github/workflows/nba_bot.yml
@@ -37,6 +37,8 @@ jobs:
           [ -f nba-bot.js ] && echo "nba-bot.js exists" || echo "nba-bot.js missing"
           echo "Script content (nba-bot.js):"
           cat nba-bot.js || echo "Failed to read nba-bot.js"
+          echo "Case-sensitive file check:"
+          find . -type f -name '*[nN][bB][aA]-[bB][oO][tT].[jJ][sS]'
           echo "Environment variables (masked):"
           echo "TWITTER_APP_KEY: ${TWITTER_APP_KEY:0:4}..."
           echo "TWITTER_APP_SECRET: ${TWITTER_APP_SECRET:0:4}..."
@@ -49,9 +51,7 @@ jobs:
           node -e "console.log('Node.js is working')"
           echo "Test minimal script execution:"
           echo "console.log('Test script running');" > test.js
-          node test.js || echo "Test script failed"
-          echo "Package.json content:"
-          cat package.json || echo "package.json not found"
+          node test.js || echo "Test script failed with exit code $?"
 
       - name: Run NBA Tweet Bot
         env:
@@ -68,10 +68,11 @@ jobs:
             echo "Script exit code: $?"
           else
             echo "Error: nba-bot.js not found"
+            exit 1
           fi
           echo "Alternative execution attempt:"
           if [ -f nba-bot.js ]; then
-            node -e "try { require('./nba-bot').postNBATweets().catch(e => { console.error('Error:', e.message); process.exit(1); }); } catch (e) { console.error('Load error:', e.message); process.exit(1); }" || echo "Alternative execution failed"
+            node -e "try { require('./nba-bot').postNBATweets().catch(e => { console.error('Error:', e.message); process.exit(1); }); } catch (e) { console.error('Load error:', e.message); process.exit(1); }" || echo "Alternative execution failed with exit code $?"
             echo "Alternative exit code: $?"
           else
             echo "Error: nba-bot.js not found for alternative execution"
