--- a/.github/workflows/nba_bot.yml
+++ b/.github/workflows/nba_bot.yml
@@ -1,5 +1,3 @@
-name: NBA Bot
-
 on:
   schedule:
     - cron: '0 12 * * *'
@@ -8,6 +6,85 @@ on:
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # Updated to Node.js 20
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm install --verbose
+
+      - name: Debug environment
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Node version:"
+          node --version
+          echo "NPM version:"
+          npm --version
+          echo "Commit hash:"
+          git rev-parse HEAD
+          echo "Repository files:"
+          ls -R
+          echo "Script existence check:"
+          [ -f nba-bot.js ] && echo "nba-bot.js exists" || echo "nba-bot.js missing"
+          echo "Script content (nba-bot.js):"
+          cat nba-bot.js || echo "Failed to read nba-bot.js"
+          echo "Case-sensitive file check:"
+          find . -type f -name '*[nN][bB][aA]-[bB][oO][tT].[jJ][sS]'
+          echo "Environment variables (masked):"
+          echo "TWITTER_APP_KEY: ${TWITTER_APP_KEY:0:4}..."
+          echo "TWITTER_APP_SECRET: ${TWITTER_APP_SECRET:0:4}..."
+          echo "TWITTER_ACCESS_TOKEN: ${TWITTER_ACCESS_TOKEN:0:4}..."
+          echo "TWITTER_ACCESS_SECRET: ${TWITTER_ACCESS_SECRET:0:4}..."
+          echo "RAPIDAPI_KEY: ${RAPIDAPI_KEY:0:4}..."
+          echo "Node modules:"
+          ls -l node_modules | head -n 20
+          echo "Test Node.js execution:"
+          node -e "console.log('Node.js is working')"
+          echo "Test minimal script execution:"
+          echo "console.log('Test script running');" > test.js
+          node test.js || echo "Test script failed with exit code $?"
+
+      - name: Run NBA Tweet Bot
+        env:
+          TWITTER_APP_KEY: ${{ secrets.TWITTER_APP_KEY }}
+          TWITTER_APP_SECRET: ${{ secrets.TWITTER_APP_SECRET }}
+          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          TWITTER_ACCESS_SECRET: ${{ secrets.TWITTER_ACCESS_SECRET }}
+          RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY }}
+        run: |
+          echo "Checking for nba-bot.js..."
+          if [ -f nba-bot.js ]; then
+            echo "nba-bot.js found, running script..."
+            set -x
+            node nba-bot.js || echo "Script failed with exit code $?"
+          else
+            echo "Error: nba-bot.js not found"
+            exit 1
+          fi
+
+      - name: Notify on failure
+        if: failure()
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          if [ -n "$SLACK_WEBHOOK_URL" ]; then
+            curl -X POST -H 'Content-type: application/json' \
+              --data "{\"text\": \"NBA Bot failed in ${{ github.repository }}. Check logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\"}" \
+              $SLACK_WEBHOOK_URL
+          else
+            echo "SLACK_WEBHOOK_URL not set, skipping notification"
+          fi
+
+  jobs:
+    run-bot:
+        runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
